# TinyFusion

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  TODOS.md  package-lock.json  package.json  prd.json
agent_flow/thoughts/: idea.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Logs.tsx  Models.tsx  Sessions.tsx  Settings.tsx
scripts/ralph/: .last-branch  prd.json  progress.txt
tasks/: prd-tinyfusion-mvp.md
tinyfusion-core/: Cargo.toml
tinyfusion-core/src/: budget.rs  chat.rs  complexity.rs  config.rs  events.rs  keepalive.rs  lib.rs  main.rs  oracle.rs  proxy.rs  server.rs  session.rs  sniffer.rs  tool_call_parser.rs  types.rs
tinyfusion-core/src/harness/: judge_synthesizer.rs  metrics_logger.rs  mod.rs  panel_dispatcher.rs  query_refiner.rs
tinyfusion-core/src/moa/: mod.rs
tinyfusion-core/tests/: integration_test.rs
tinyfusion-gui/: Cargo.toml  tauri.conf.json
tinyfusion-gui/src/: main.rs
tinyfusion-gui/src-tauri/capabilities/: default.json
