[package]
name = "tinyfusion-core"
version = "0.1.0"
edition = "2021"
description = "TinyFusion - Local AI API gateway with MoA diagnostic, SSE keep-alive, and verify-and-retry oracle"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tempfile = "3"
